2012-06-20  Rajarshi Guha  <guhar@hg-01716957-lwx.nhgri.nih.gov>

	* R/smiles.R (parse.smiles): Updated code to recognize there
	is no longer a IMolecule class

	* R/atoms.R (get.charge): Updated code to recognize there
	is no longer a IMolecule class

	* R/desc.R (get.desc.names): Updated code to recognize there
	is no longer a IMolecule class

	* R/rcdk.R (get.title): Updated code to recognize there
	is no longer a IMolecule class

	* R/props.R (get.properties): Updated code to recognize there
	is no longer a IMolecule class

	* R/formula.R (get.mol2formula): Updated code to recognize there
	is no longer a IMolecule class

	* inst/unitTests/runit.frags.R (test.frag3): Updated to remove
	references to IMolecule and Molecule

2012-03-09  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/atoms.R (get.connected.atoms): Added method to retrieve atoms
	connected to the specified atom.
	(get.atom.index): Added method to retrieve index of the atom in a
	molecule, starting from 0

	* R/props.R (get.property): Updated to check for null molecule
	objects. Also made property retrieval more robust by checking
	explicitly for exceptions

2012-02-26  Rajarshi Guha  <guhar@niaaa-lptroach.niaaa.nih.gov>

	* inst/doc/rcdk.Rnw: Updated vignette to not evaluate all descriptors for all molecules. 
	Instead we now hand pick a few descriptors for the example on predictive models

2012-02-23  Rajarshi Guha  <guhar@dk31r9a06lp5a.niddk.nih.gov>

	* man/getfp.Rd: Updated documentation for the new parameters in
	get.fingerprint and iload.molecules

2012-02-22  Rajarshi Guha  <guhar@Rajarshi-Guha-MacBook-Pro.local>

	* R/rcdk.R (get.fingerprint): Updated to manually check for
	exceptions and if one occurs optionally print it out (depending on
	the value of he verbose parameter)

2011-12-13  Rajarshi Guha  <guhar@citdcssgoldi7lt.cit.nih.gov>

	* Updated NAMESPACE to export the .get.desc.value method

2011-11-01  Rajarshi Guha  <guhar@OfficeMac.local>
	