@@ -1,10 +1,10 @@
 Package: rcdk
-Version: 3.1.8
-Date: 2012-06-20
+Version: 3.1.9
+Date: 2012-07-05
 Title: rcdk - Interface to the CDK Libraries
 Author: Rajarshi Guha <rajarshi.guha@gmail.com>
 Maintainer: Rajarshi Guha <rajarshi.guha@gmail.com>
-Depends: R (>= 2.11.0), rJava, rcdklibs, fingerprint, methods, png, iterators
+Depends: R (>= 2.11.0), rJava, rcdklibs (>= 1.5.0), fingerprint, methods, png, iterators
 Suggests: xtable, RUnit
 License: LGPL 
 LazyLoad: yes
